--- a/static/index.html
+++ b/static/index.html
@@ -32,6 +32,8 @@ limitations under the License.
     <div id="main">
       <div id="plush-jobs"></div>
       <div id="screen"><div>
+        <div id="file-tree">
+        </div>
         <div id="scrollback">
         </div>
         <div id="input-area">
